# yast-add-on

./: .cvsignore  .gitignore  .rubocop.yml  .travis.yml  MAINTAINER  README.md  RPMNAME  Rakefile  yast2-add-on.spec.in
agents/: Makefile  Makefile.am  Makefile.in
doc/: Makefile.am
doc/autodocs/: Makefile  Makefile.am  Makefile.in
package/: yast2-add-on.changes  yast2-add-on.spec
src/: AddOnProduct.ycp  Makefile.am  add-on-workflow.ycp  add-on.desktop  add-on.rnc  add-on.ycp  add-on_auto.ycp  add-on_proposal.ycp  inst_add-on.ycp  inst_add-on_software.ycp  inst_language_add-on.ycp  misc.ycp  vendor.desktop  vendor.ycp
src/autoyast-rnc/: add-on.rnc
src/clients/: add-on.rb  add-on.ycp  add-on_auto.rb  add-on_auto.ycp  add-on_proposal.rb  add-on_proposal.ycp  inst_add-on.rb  inst_add-on_software.rb  inst_add-on_software.ycp  inst_language_add-on.rb  vendor.rb  vendor.ycp
src/desktop/: add-on.desktop  org.opensuse.yast.AddOn.desktop  org.opensuse.yast.Vendor.desktop  vendor.desktop
src/include/add-on/: add-on-workflow.rb  add-on-workflow.ycp  misc.rb  misc.ycp
src/lib/add-on/clients/: add-on_auto.rb  inst_add-on.rb
src/modules/: AddOnOthers.rb
test/: add-on-workflow_test.rb  add-on_auto_test.rb  addon_others_test.rb  repositories_include_test.rb  test_helper.rb
test/y2add_on/clients/: add-on_auto_test.rb  inst_add-on_test.rb
